# KazakhstanOlympiadAI-HomeTask

./: pyproject.toml
data/: provided_train.jsonl  test.jsonl  train.jsonl
train/: baseline_train.py
